Alteração de texte

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="utf-8">
-    <title>Agendamento</title>
+    <title>Progeto Agendamento</title>
 </head>
 <body>
 <h1>Projeto Agendamento</h1>
